fixing layout issues.

--- a/app/assets/stylesheets/wingolf_layout/users_new.css.sass
+++ b/app/assets/stylesheets/wingolf_layout/users_new.css.sass
@@ -19,3 +19,5 @@ form.formtastic.user#new_user
     .btn
       padding: 10px
       margin-left: -37px
+  input[type='text'], input[type='email'], input[type='tel'], textarea
+    width: 450px
